--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,13 @@ spring:
       host: localhost
       port: 6379
       password: sa
+      timeout: 2000
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
+        shutdown-timeout: 100
   cache:
     redis:
       time-to-live: 60000
